# ferret

./: '  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ]  ferret  main.cpp
base/: Lexer.cpp  Parser.cpp
docs/: Dockerfile  docker-compose.yml  package-lock.json  package.json  source.config.ts
examples/: main.fl  main.fr
ferret-language-pack/: CHANGELOG.md  LICENSE  Makefile  ferret-syntax-theme-1.0.0.vsix  package.json  vsc-extension-quickstart.md
ferret-language-pack/syntaxes/: ferret.tmLanguage.json
ferret-language-pack/themes/: color-theme.json
include/: lexer.h  utils.h
include/lib/: snaps.h
samples/: main.fl
spec/: language.spec.fr  main.fr  spec.fr
spec/app/: router.fr  todo.fr
spec/examples/: todo.fr
spec/examples/app/: router.fr
src/: CMakeLists.txt  Makefile  compiler.c  compiler.cpp  lexer.c  main.c
src/console/: CMakeLists.txt  console.cpp  console.h  console.hpp
src/core/: CMakeLists.txt
src/core/codegen/: codegen.cpp  codegen.hpp
src/core/console/: console.cpp  console.hpp
src/core/fs/: fs.cpp  fs.hpp
src/core/parser/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/dependencies/: lexer.c
test/: Makefile
tests/: CMakeLists.txt  run_tests.sh  test_snaps.c  test_utils.c
tests/lib/: helpers.c  snaps.c
